--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
         </nav>
 
-
+        <p><pre> <a href = "index.html"> home </a>      <a href = "methodtest.html"> method test </a>        <a href = "webcomponent.html"> webcomponent</a>   </pre></p>
         <header>
             
             <img src="assets/IMG_7841.jpeg" height = 250px class = "headerbird" alt = "Image of a bird.">
