--- a/webcomponent.html
+++ b/webcomponent.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1> button click counter </h1>
+    <p><pre> <a href = "index.html"> home </a>      <a href = "methodtest.html"> method test </a>        <a href = "webcomponent.html"> webcomponent</a>   </pre></p>
     <button-count></button-count>
     <script type = "module" src="ButtonCount.js"></script>
 </body>
