--- a/methodtest.html
+++ b/methodtest.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <p><pre> <a href = "index.html"> home </a>      <a href = "methodtest.html"> method test </a>        <a href = "webcomponent.html"> webcomponent</a>   </pre></p>
     <style> input{ display:block;}
         label{display:block;}
         </style>
